--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.2</version>
+            <version>4.4-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
-            <version>4.3.2</version>
+            <version>4.4-alpha1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
